force-app/main/default/objects/Lead/fields/bluetahiti__Company_Status__c.field-meta.xml
<CustomField>
    <fullName>bluetahiti__Company_Status__c</fullName>
    <label>Company Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>