force-app/main/default/objects/Lead/fields/bluetahiti__Creditsafe_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>bluetahiti__Creditsafe_Registration_Number__c</fullName>
    <label>Creditsafe Registration Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>