force-app/main/default/objects/Lead/fields/bluetahiti__Creditsafe_Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>bluetahiti__Creditsafe_Registration_Type__c</fullName>
    <label>Creditsafe Registration Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>