force-app/main/default/objects/Lead/fields/bluetahiti__Creditsafe_Status__c.field-meta.xml
<CustomField>
    <fullName>bluetahiti__Creditsafe_Status__c</fullName>
    <label>Creditsafe Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>