force-app/main/default/objects/Lead/fields/bluetahiti__Creditsafe_Type__c.field-meta.xml
<CustomField>
    <fullName>bluetahiti__Creditsafe_Type__c</fullName>
    <label>Creditsafe Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>