force-app/main/default/objects/Lead/fields/bluetahiti__creditSafeCompanyType__c.field-meta.xml
<CustomField>
    <fullName>bluetahiti__creditSafeCompanyType__c</fullName>
    <label>Creditsafe Company Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>