force-app/main/default/objects/Lead/fields/bluetahiti__creditSafeInternationalScore__c.field-meta.xml
<CustomField>
    <fullName>bluetahiti__creditSafeInternationalScore__c</fullName>
    <label>Creditsafe International Rating</label>
    <length>4</length>
    <type>Text</type>
</CustomField>