force-app/main/default/objects/Lead/fields/bluetahiti__creditSafeInternationalScoreDescription__c.field-meta.xml
<CustomField>
    <fullName>bluetahiti__creditSafeInternationalScoreDescription__c</fullName>
    <label>Creditsafe International Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>