force-app/main/default/objects/Lead/fields/bluetahiti__creditsafeNumber__c.field-meta.xml
<CustomField>
    <fullName>bluetahiti__creditsafeNumber__c</fullName>
    <label>Creditsafe Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>