force-app/main/default/objects/Lead/fields/bluetahiti__creditSafeRating__c.field-meta.xml
<CustomField>
    <fullName>bluetahiti__creditSafeRating__c</fullName>
    <label>Creditsafe Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>