force-app/main/default/objects/Lead/fields/bluetahiti__creditSafeScore__c.field-meta.xml
<CustomField>
    <fullName>bluetahiti__creditSafeScore__c</fullName>
    <label>Creditsafe Rating</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>