force-app/main/default/objects/Lead/fields/bluetahiti__creditSafeScoreDescription__c.field-meta.xml
<CustomField>
    <fullName>bluetahiti__creditSafeScoreDescription__c</fullName>
    <label>Creditsafe Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>