force-app/main/default/objects/Lead/fields/bluetahiti__Pre_tax_profit__c.field-meta.xml
<CustomField>
    <fullName>bluetahiti__Pre_tax_profit__c</fullName>
    <label>Pre-tax profit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>