force-app/main/default/objects/Lead/fields/bluetahiti__Shareholder_Funds__c.field-meta.xml
<CustomField>
    <fullName>bluetahiti__Shareholder_Funds__c</fullName>
    <label>Shareholder Funds</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>